Archive2/57/7cb8f90fc49890/output
main.cpp:26:13: error: no matching function for call to 'binarySearch'
    cout << binarySearch(t1, 0);
            ^~~~~~~~~~~~
main.cpp:15:5: note: candidate function [with sequence = std::vector<int, std::allocator<int> >, T = int] not viable: expects an l-value for 2nd argument
int binarySearch(sequence& seq, T& item)
    ^
main.cpp:9:5: note: candidate function template not viable: requires 4 arguments, but 2 were provided
int binarySearch(sequence& seq, int low, int high, T& item)
    ^
1 error generated.
